--- a/handler/src/main/resources/application.yml
+++ b/handler/src/main/resources/application.yml
@@ -1,5 +1,15 @@
-# MySQL示例配置
-spring.datasource.url=jdbc:mysql://localhost:3307/floowers
-spring.datasource.username=root
-spring.datasource.password=123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      master:  # 添加这层以匹配配置类
+        url: jdbc:mysql://localhost:3307/floowers?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+        username: root
+        password: "123"  # 必须加双引号
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        initial-size: 5
+        min-idle: 5
+        max-active: 20
+        max-wait: 60000
+        validation-query: SELECT 1  # 必须添加
+        test-while-idle: true      # 必须添加
